fix(header): attempt to fix header disappearing on jump (ios)

--- a/assets/main.css
+++ b/assets/main.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {height:100%;overflow: hidden}
 
 .default-darkmode-item {
   @apply border-slate-400 bg-slate-300 dark:bg-gray-900 transition-colors;
